@@ -1,1 +1,3 @@
 SUBDIRS = turbocharger
+
+bin_SCRIPTS = xml-rpc-api2txt
